Added FormConfig listing route
