# models/form_config/form_list_item_dto.go
@@ -1,0 +1,7 @@
+package form_config
+
+type FormListItem struct {
+	Id       int64
+	SiteId   int64
+	Hostname string
+}
